--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>Outdoor Adventures</title>
 
-
-
   </head>
 
   <body>
@@ -15,6 +13,16 @@
         <li> <a href="home">Home</a></li>
         <li><a href="gallery">Gallery</a></li>
         <li><a href="contact">Contact</a></li>
+        <div class="dropdown">
+          <button class="button" name="button">Categories</button>
+          <div class="categories">
+            <a href="">Rock Climbing</a>
+            <a href="">Camping</a>
+            <a href="">Hiking</a>
+            <a href="">Fishing</a>
+          </div>
+
+        </div>
       </ul>
     </nav>
     <header class="top1">
@@ -30,7 +38,7 @@
     </div>
 
     <section class="menu">
-      <h1>Rock Climbing<h1><img src="rock_climbing/photo-449609.jpeg" alt="rock climbing" height:"250px" width="600px">
+      <h1>Rock Climbing<h1><img src="rock_climbing/rock_climbing1.jpg" alt="rock climbing" height:"250px" width="600px">
 
 
 
