--- a/index.html
+++ b/index.html
@@ -38,13 +38,46 @@
     </div>
 
     <section class="menu">
-      <h1>Rock Climbing<h1><img src="rock_climbing/rock_climbing1.jpg" alt="rock climbing" height:"250px" width="600px">
+      <div class="sidetext">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      <div class="">
+        <h1>Rock Climbing</h1>
+          <div id="rock_image"><img src="rock_climbing/rock_climbing1.jpg" alt="rock climbing" height:"250px" width="600px" align="middle"></div>
+          </section>
+
+         <section id="table_mountain">
+
+
+          <h3>Table Mountain</h3>
+          <p>
+         Table Mountain towers more than a 1 000m above the Mother City. This is South Africa’s most recognised landmark. Greater Cape Town and its southern suburbs nestle against the bulk of the mountain range, which stretches from Signal Hill above Table Bay to Cape Point in the south.
+          </p>
+          <p>
+        With over 3 000 trad climbing routes on its sheer sandstone cliffs, Table Mountain is a paradise for rock climbers from around the world. It has spectacular routes of varying grades on top quality rock - all set within pristine natural surroundings. The diversity and quality of climbing are on a par with anywhere else in the world. Despite the easy access the routes are uncrowded - even on weekends and public holidays - making the area a favoured destination for overseas visitors.
+          </p>
+        <p>
+        There are single and multi-pitch routes on the Lower Buttresses - notably the very easy ‘Fraser’s Variation’ and the more challenging ‘Bombay Duck’. However, ‘The Ledge’ is the focal point for rock climbers. Must-dos include the spectacularly exposed but easy ‘Jacobs Ladder’ and harder iconic routes like ‘Atlantic Crag’ and ‘Roulette’.
+        </p>
+        </section>
+
+       </div>
+       <section class="menu">
+         <div class="sidetext">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+         </div>
+         <div class="">
+           <h1>Camping</h1>
+           <div id="rock_image"><img src="" alt="">
+
+       </section>
 
 
 
 
 
-    </section>
+
+
 
 
 
