--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+  <!DOCTYPE html>
+  <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/style.css">
-    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <title>Outdoor Adventures</title>
 
   </head>
@@ -10,9 +14,9 @@
   <body>
     <nav>
       <ul>
-        <li> <a href="home">Home</a></li>
-        <li><a href="gallery">Gallery</a></li>
-        <li><a href="contact">Contact</a></li>
+        <li> <a href="index.html">Home</a></li>
+        <li><a href="gallery_page/gallery.html">Gallery</a></li>
+        <li><a href="contact_page/contact.html">Contact</a></li>
         <div class="dropdown">
           <button class="button" name="button">Categories</button>
           <div class="categories">
@@ -27,14 +31,14 @@
     </nav>
     <header class="top1">
 
-    <h1>Outdoor Adventures</h1>
+      <h1>Outdoor Adventures</h1>
 
-  </header>
+    </header>
 
-  <hr>
+    <hr>
     <div id="container">
 
-      <div class=""><h1>Rock Climbing</h1><a href="#rock"><img src="images/rock_climbing/pexels-photo-461593.jpeg" alt="rock_climbing" width="" height=""></a>
+      <div class=""><h1>Rock Climbing</h1><a href="#rock"><img src="images/rock_climbing/pexels-photo-461593.jpeg" alt="rock_climbing" width="100%" height="100%"></a>
       </div>
 
       <div class="camping"><h1>Camping</h1><a href="#camping"><img src="images/camping/pexels-photo-803226.jpeg" alt="camping"></a>
@@ -46,126 +50,151 @@
       <div class="fishing"><h1>Fishing</h1><a href="#fishing"><img src="images/fishing/fishing-boat-fisherman.jpeg" alt="fishing"></a>
       </div>
 
+      <hr>
     </div>
 
-    <hr>
+
     <section class="menu">
       <div class="sidetext">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <pre>
+          Sun protection.
+          First aid supplies.
+          Nutrition such as food and lots of water.
+          Warm jacket, cape town weather is unpredictable.
+        </pre>
       </div>
       <div id="rock" class="">
         <h1>Rock Climbing</h1>
-          <div id="info_image"><img src="images/rock_climbing/rock_climbing1.jpg" alt="rock climbing" height:"250px" width="600px" align="middle"></div>
+        <div id="info_image"><img src="images/rock_climbing/rock_climbing1.jpg" alt="rock climbing"  width="80%" align="middle"></div>
+      </section>
+
+      <section id="info_text">
+        <h3>Table Mountain</h3>
+        <p>
+          Table Mountain towers more than a 1 000m above the Mother City. This is South Africa’s most recognised landmark. Greater Cape Town and its southern suburbs nestle against the bulk of the mountain range, which stretches from Signal Hill above Table Bay to Cape Point in the south.
+        </p>
+        <p>
+          With over 3 000 trad climbing routes on its sheer sandstone cliffs, Table Mountain is a paradise for rock climbers from around the world. It has spectacular routes of varying grades on top quality rock - all set within pristine natural surroundings. The diversity and quality of climbing are on a par with anywhere else in the world. Despite the easy access the routes are uncrowded - even on weekends and public holidays - making the area a favoured destination for overseas visitors.
+        </p>
+        <p>
+          There are single and multi-pitch routes on the Lower Buttresses - notably the very easy ‘Fraser’s Variation’ and the more challenging ‘Bombay Duck’. However, ‘The Ledge’ is the focal point for rock climbers. Must-dos include the spectacularly exposed but easy ‘Jacobs Ladder’ and harder iconic routes like ‘Atlantic Crag’ and ‘Roulette’.
+        </p>
+        <hr>
+      </section>
+    </div>
+
+
+
+    <section class="menu2">
+      <div class="sidetext">
+
+
+      </div>
+      <div id="camping">
+        <h1>Camping</h1>
+        <div id="info_image"><img src="images/camping/camping-tents-outdoors (1).png" alt="camping" align="middle" width:"80%">
+
+        </section>
+        <section id="info_text">
+          <h3>Blue Waters Resort</h3>
+          <p>
+            Blue Waters Resort is located a mere five-minute walk away from Blue Waters Beach. The resort is also close to Mnandi Beach, which has Blue Flag status. Blue Waters Resort has braai and picnic areas. Guests of the resort can also enjoy extensive birdwatching by taking a trip to the nearby False Bay Ecology Park.
+          </p>
+          <p>
+            Everyone needs a break from the hustle and bustle of the city once in a while, so pack your bags and explore the Western Cape's beautiful outdoors for some peace and tranquility.
+          </p>
+          Take your family and head off for a day trip. Enjoy a braai, picnic or an intimate weekend getaway. State-owned resorts and camping sites provide the perfect affordable family holiday at any time of the year. So before you pack your car and head off to a chalet near the sea or pitch your tent in the scenic mountains, have a look at the variety of holiday resorts maintained by government.
+          <p>
+            Whether you prefer a holiday spot that comes with all four walls or an open space under the stars to park your caravan, there are many relaxing options available to cater for your needs.
+          </p>
+
+          <hr>
+        </section>
+
+
+        <section class="menu3">
+          <div class="sidetext">
+            <h2>HIKING CHECKLIST</h2>
+            <h3>Essentials</h3>
+            <pre>
+              Sun protection.
+              First aid supplies.
+              Nutrition such as food and lots of water.
+              Warm jacket, cape town weather is unpredictable.
+
+            </pre>
+
+
+          </div>
+          <div id="hiking">
+            <h1>Hiking</h1>
+            <div id="info_image"><img src="images/hiking/hiking_platterkloof.jpg" alt="hiking" height=280px width=610px>
+
+
+            </div>
+
+          </section>
+          <section id="info_text">
+            <h3>Table Mountain via Platterklip Gorg</h3>
+            <p>
+              The Table Mountain cable car is the easiest way to ascend to the top of Table Mountain – the glorious natural heritage site that looms above Cape Town’s city bowl. If you seek a sense of accomplishment and physical exhilaration then ascending to the top via Platteklip Gorge is a must.
+
+            </p>
+            <p>
+              The hike begins about 1.6km after the cable car station (to the left) on Tafelberg Road and is well signposted all the way to the top.
+            </p>
+            <p>
+              Although it is the easiest way to climb to the top of Table Mountain, it is physically taxing, although not requiring much mountaineering skills. The 3km long trail rises by 700m and is a relentless and steep gradient to climb. Only attempt this hike if you are confident that your fitness levels will allow you to ascend at a fair pace.
+            </p>
+            <p>
+              It is essential to take plenty of water with you on this hike as you’re exposed to the sun for the duration of the hike and you’re not going to find any water on the mountain. You should also pack something warm in your hiking bag as the temperature often decreases by 6 to 8°C once you reach the summit.
+            </p>
+            <p>
+              The hike will reward you with a stunning panorama of Cape Town as you look down onto the CBD and Camps Bay. You have three choices once you reach the top of Table Mountain:
+            </p>
+            <p>
+              None of the routes on the top of the mountain require much skill and can actually be regarded as leisurely walks. The most prominent one would be the walk to Maclear’s Beacon which affords you a stunning view of the Cape Flats and Table Bay.
+            </p>
+            <hr>
+
+          </section>
+          <section class="menu4">
+            <div class="sidetext">
+              <pre>
+                Sun protection.
+                First aid supplies.
+                Nutrition such as food and lots of water.
+                Warm jacket, cape town weather is unpredictable.
+
+              </pre>
+
+
+            </div>
+            <div id="fishing">
+              <h1>Fishing</h1>
+              <div id="info_image"><img src="images/fishing/fishing_cape.jpg" alt="fishing" width="600px" height="380px">
+
+              </div>
+            </div>
+
+          </section>
+          <section id="info_text">
+            <h3>Cape Agulhas</h3>
+            <p>
+              Experience the warm Agulhas current of the Indian Ocean and the cold Benguela current of the Atlantic Ocean on a thrilling deep sea fishing tour, providing an exciting trip to Cape Town. Offering some of the richest deep sea fishing grounds in the world, Cape Town's waters are teeming with life and are home to a number of different cetaceans such as common dolphins, dusky dolphins, Southern Right whales, Humpback whales, Bryde's whales and Orcas.
+            </p>
+            <p>
+              On your tour you may also encounter Cape Fur seals as well as coastal and pelagic seabirds. Deep sea fishing can be enjoyed all year round in Cape Town. Predominant offshore target species include Yellowfin tuna - one of the world's toughest fighting fish, Longfin tuna - a smaller member of its family, and very often Skipjack, Katonkel, Dorado and Cape Snoek may be hooked.
+            </p>
+            <p>
+              Game shark such as the Mako and Blue shark ensure a great fishing experience, but are caught on a strict catch and release policy.
+            </p>
+
           </section>
 
-         <section id="info_text">
-          <h3>Table Mountain</h3>
-          <p>
-         Table Mountain towers more than a 1 000m above the Mother City. This is South Africa’s most recognised landmark. Greater Cape Town and its southern suburbs nestle against the bulk of the mountain range, which stretches from Signal Hill above Table Bay to Cape Point in the south.
-          </p>
-          <p>
-        With over 3 000 trad climbing routes on its sheer sandstone cliffs, Table Mountain is a paradise for rock climbers from around the world. It has spectacular routes of varying grades on top quality rock - all set within pristine natural surroundings. The diversity and quality of climbing are on a par with anywhere else in the world. Despite the easy access the routes are uncrowded - even on weekends and public holidays - making the area a favoured destination for overseas visitors.
-          </p>
-        <p>
-        There are single and multi-pitch routes on the Lower Buttresses - notably the very easy ‘Fraser’s Variation’ and the more challenging ‘Bombay Duck’. However, ‘The Ledge’ is the focal point for rock climbers. Must-dos include the spectacularly exposed but easy ‘Jacobs Ladder’ and harder iconic routes like ‘Atlantic Crag’ and ‘Roulette’.
-        </p>
-        </section>
-         </div>
 
-
-         <hr>
-       <section class="menu2">
-         <div class="sidetext">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-         </div>
-         <div id="camping">
-           <h1>Camping</h1>
-           <div id="info_image"><img src="images/camping/camping-tents-outdoors (1).png" alt="camping" height:"250px" width:"600px">
-
-       </section>
-       <section id="info_text">
-         <h3>Blue Waters Resort</h3>
-         <p>
-           Blue Waters Resort is located a mere five-minute walk away from Blue Waters Beach. The resort is also close to Mnandi Beach, which has Blue Flag status. Blue Waters Resort has braai and picnic areas. Guests of the resort can also enjoy extensive birdwatching by taking a trip to the nearby False Bay Ecology Park.
-         </p>
-         <p>
-           Everyone needs a break from the hustle and bustle of the city once in a while, so pack your bags and explore the Western Cape's beautiful outdoors for some peace and tranquility.
-         </p>
-           Take your family and head off for a day trip. Enjoy a braai, picnic or an intimate weekend getaway. State-owned resorts and camping sites provide the perfect affordable family holiday at any time of the year. So before you pack your car and head off to a chalet near the sea or pitch your tent in the scenic mountains, have a look at the variety of holiday resorts maintained by government.
-         <p>
-           Whether you prefer a holiday spot that comes with all four walls or an open space under the stars to park your caravan, there are many relaxing options available to cater for your needs.
-         </p>
-
-       </section>
-       <hr>
-
-       <section class="menu3">
-         <div class="sidetext">
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-         </div>
-         <div id="hiking">
-           <h1>Hiking</h1>
-           <div id="info_image"><img src="images/hiking/hiking_platterkloof.jpg" alt="hiking" height=280px width=610px>
-
-
-         </div>
-
-       </section>
-       <section id="info_text">
-         <h3>Table Mountain via Platterklip Gorg</h3>
-         <p>
-           The Table Mountain cable car is the easiest way to ascend to the top of Table Mountain – the glorious natural heritage site that looms above Cape Town’s city bowl. If you seek a sense of accomplishment and physical exhilaration then ascending to the top via Platteklip Gorge is a must.
-
-         </p>
-         <p>
-           The hike begins about 1.6km after the cable car station (to the left) on Tafelberg Road and is well signposted all the way to the top.
-         </p>
-         <p>
-           Although it is the easiest way to climb to the top of Table Mountain, it is physically taxing, although not requiring much mountaineering skills. The 3km long trail rises by 700m and is a relentless and steep gradient to climb. Only attempt this hike if you are confident that your fitness levels will allow you to ascend at a fair pace.
-         </p>
-         <p>
-           It is essential to take plenty of water with you on this hike as you’re exposed to the sun for the duration of the hike and you’re not going to find any water on the mountain. You should also pack something warm in your hiking bag as the temperature often decreases by 6 to 8°C once you reach the summit.
-         </p>
-         <p>
-           The hike will reward you with a stunning panorama of Cape Town as you look down onto the CBD and Camps Bay. You have three choices once you reach the top of Table Mountain:
-         </p>
-         <p>
-           None of the routes on the top of the mountain require much skill and can actually be regarded as leisurely walks. The most prominent one would be the walk to Maclear’s Beacon which affords you a stunning view of the Cape Flats and Table Bay.
-         </p>
-         <hr>
-
-       </section>
-       <section class="menu4">
-         <div class="sidetext">
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-         </div>
-         <div id="fishing">
-           <h1>Fishing</h1>
-           <div id="info_image"><img src="images/fishing/fishing_cape.jpg" alt="fishing" width="600px" height="380px">
-
-           </div>
-         </div>
-
-       </section>
-       <section id="info_text">
-         <h3>Cape Agulhas</h3>
-         <p>
-           Experience the warm Agulhas current of the Indian Ocean and the cold Benguela current of the Atlantic Ocean on a thrilling deep sea fishing tour, providing an exciting trip to Cape Town. Offering some of the richest deep sea fishing grounds in the world, Cape Town's waters are teeming with life and are home to a number of different cetaceans such as common dolphins, dusky dolphins, Southern Right whales, Humpback whales, Bryde's whales and Orcas.
-         </p>
-         <p>
-           On your tour you may also encounter Cape Fur seals as well as coastal and pelagic seabirds. Deep sea fishing can be enjoyed all year round in Cape Town. Predominant offshore target species include Yellowfin tuna - one of the world's toughest fighting fish, Longfin tuna - a smaller member of its family, and very often Skipjack, Katonkel, Dorado and Cape Snoek may be hooked.
-         </p>
-         <p>
-           Game shark such as the Mako and Blue shark ensure a great fishing experience, but are caught on a strict catch and release policy.
-         </p>
-
-       </section>
-
-
-  </body>
-  <footer id="footer">
-
-  </footer>
-</html>
+        </body>
+        <footer id="footer">
+             <em>outdoor adventures 2018</em>
+        </footer>
+        </html>
