--- a/gallery_page/gallery.html
+++ b/gallery_page/gallery.html
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li> <a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="gallery_page/gallery.html">Gallery</a></li>
+        <li><a href="contact_page/contact.html">Contact</a></li>
         <div class="dropdown">
           <button class="button" name="button">Categories</button>
           <div class="categories">
