--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 
         </body>
-        <footer id="footer">
+        <!-- <footer id="footer">
              <em>outdoor adventures 2018</em>
-        </footer>
+        </footer> -->
         </html>
