--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="css/gallery_style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Gallery</title>
+    <title>Gallery | Outhdoor Adventures</title>
   </head>
   <body>
     <nav>
