--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>contact</title>
+    <title>Contact | Outdoor Adventures</title>
       <link rel="stylesheet" href="css/contact_style.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
+      <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+      <meta charset="UTF-8">
     <style media="screen">
 
 
